...
                        tools:text="Error concerning the spot"
                        android:text='@{errors.getError("Places.spot")}'
                        android:layout_marginTop="@dimen/margin_small"
                        android:visibility='@{errors.hasError("Places.spot") ? View.VISIBLE : View.GONE}'/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/event_name"
                        style="@style/labeledFormEditText"
                        android:hint="@string/hint_event_name"
                        android:nextFocusForward="@+id/description_edit_text"
                        android:text="@={event.name}"
                        app:errorText='@{errors.getError("Places.name")}'/>

                    <com.rengwuxian.materialedittext.MaterialEditText
                        xmlns:app="http://schemas.android.com/tools"
                        android:id="@+id/description_edit_text"
...
