<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_validate_tags"
        android:title="@string/action_post"
        app:showAsAction="always" />

</menu>